syntax="proto3";
package org.example.protocolbuffers;

option java_package = "protocolBuffers";
option java_outer_classname = "SwimmingContestProtocol";

message Participant{
  int64 id = 1;
  string name = 2;
  int32 age = 3;
}

message Event{
  int64 id = 1;
  string style = 2;
  int32 distance = 3;
}

message User{
  int64 id = 1;
  string userName = 2;
  string password = 3;
}

message Office{
  int64 id = 1;
  Participant participant = 2;
  Event event = 3;
}

message EventDTO{
  int64 id = 1;
  string name = 2;
  int32 distance = 3;
  int32 participantsCount = 4;
}

message ParticipantDTO{
  int64 id = 1;
  string name = 2;
  int32 age = 3;
  int32 eventCount = 4;
}

message SwimmingContestRequest{
  enum Type{
    Unknown  = 0;
    Login = 1;
    Logout = 2;
    CreateParticipant = 3;
    CreateEventEntry = 4;
    GetAllEvents = 5;
    GetAllParticipants = 6;
    GetEventsWithParticipantsCount = 7;
    GetParticipantsForEventWithCount = 8;
    CreateEvent = 9;
  }
  Type type = 1;
  string userName = 2;
  string password = 3;
  User user = 4;
  Participant participant = 5;
  repeated Office office = 6;
  int64 eventId = 8;
  Event event = 9;
}

message SwimmingContestResponse{
  enum Type{
    Unknown = 0;
    Ok = 1;
    Error = 2;
    NewParticipant = 3;
    NewEventEntry = 4;
    AllEvents = 5;
    AllParticipants = 6;
    GetEventWithParticipantsCount = 7;
    GetParticipantsForEventWithCount = 8;
    UpdatedEvents = 9;
    NewEvent =10;
  }
  Type type = 1;
  string errorMessage = 2;
  Participant participant = 3;
  EventDTO eventDTO = 4;
  User user = 5;
  repeated Participant participants = 6;
  repeated Event events = 7;
  repeated EventDTO eventsDTO = 8;
  repeated ParticipantDTO participantsDTO = 9;
}